# stnd

./: .gitignore  README.md  prepare_repo.sh  requirements-test.txt  requirements.txt  setup.cfg
.cursor/rules/: vibe.mdc
.github/workflows/: test_and_merge.yml
stnd/run_cmd/: main.py  runner.py
stnd/run_from_csv/: RUN_FROM_CSV_README.md  __init__.py  __main__.py  gsheet_macros.js
stnd/run_with_monitor/: README.md  __main__.py  command_builder.py  config_processor.py  gsheet_batch_updater.py  job.py  job_manager.py  job_monitor.py  job_submission.py  slurm_utils.py
stnd/run_with_monitor/utility/: helpers_for_main.py  logger.py  message_client.py  utils.py
stnd/utility/: configs.py  data_utils.py  helpers_for_main.py  imports.py  logger.py  utils.py
tests/: test_data_utils.py  test_gdrive_utils.py  test_gspread_client.py  test_import_utils.py
tests/run_from_csv/: canonical_condor.txt  canonical_condor_sh_file.txt  canonical_csv.csv  canonical_sbatch.txt  config.yaml  executable.py  test_main.py
tests/run_from_csv/canonical_files/: canonical_condor_sh_file.txt  canonical_csv.csv  canonical_csv_runner.csv  canonical_sbatch.txt
tests/run_from_csv/csvs/: csv_for_runner.csv
tutorials/cluster/: CLUSTER.md
tutorials/macros/: MACROS.md
tutorials/quick_start_guide/: QUICK_START_GUIDE.md  default_config.yml  experiment.py  filled_results.csv  filled_results_wandb.csv  results.csv
tutorials/reference/: REFERENCE.md
tutorials/runner/: RUNNER.md  filled_runner_results.csv  runner_config.yaml  runner_results.csv  runner_target.py
tutorials/syncing/: SYNC.md
(+4 files in other folders)
