[metadata]
name = stnd
version = 1.0.0
author = Alexander Rubinstein
author_email = rubalex14@gmail.com
description = TODO
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/AlexanderRubinstein/stnd
project_urls =
    Bug Tracker = https://github.com/AlexanderRubinstein/stnd/issues
    repository = https://github.com/AlexanderRubinstein/stnd
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.10
install_requires =
    gspread>=5.7.2
    pandas>=1.4.3
    filelock>=3.12.0
    wandb>=0.15.11
    pydrive2>=1.15.0
    psutil>=5.9.0

[options.packages.find]
where = .
